--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 		function hideTabOnMobile() {
         $(".showMobileForm").hide();
 		 $(".popupCloseButton").hide();
+		  $(".mn").hide();
+		$(".frm3").css("backgroundColor", "rgba(0,0,0,.4)");
 		}
         function tabOnMobile() {
         $(".showMobileForm").show();
 	    $(".popupCloseButton").show();			
+	    $(".mn").show();		
+	    $(".frm3").css("backgroundColor", "transparent");		
     }
 	
 	$( window ).resize( function() {
@@ -27,9 +31,10 @@
 		  }
 		  else{
 		  	$(".frm3").css("backgroundColor", "rgba(0,0,0,.4)");
+			$(".mn").hide();
+			$('.popupCloseButton').hide();
+			$(".showMobileForm").hide();
 		  }
-		  
-		
 		});
 	</script>
 	</head>
@@ -77,7 +82,7 @@
 							<input type="email" class="form-control" placeholder="Email*">
 						</div>
 						<div class="form-group field3 ">
-							<input type="number" class="form-control" placeholder="Mobile Number*" onClick="tabOnMobile();">
+							<input type="mobile number" class="form-control" placeholder="Mobile Number*" onClick="tabOnMobile();">
 						</div>
 						<div class="form-group field4 showMobileForm">
 							<select class="form-control" style="background-color:#eeefef;">
